# pytest-benchmark

./: .appveyor.yml  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .coveragerc-bootstrap  .cruft.json  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  _typos.toml  appveyor.yml  bootstrap.py  pyproject.toml  pytest-benchmark.komodoproject  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: codespell.yml  github-actions.yml
ci/: appveyor-bootstrap.py  bootstrap.py
ci/templates/: .appveyor.yml  .travis.yml  appveyor.yml  tox.ini
conf/: .travis.yml  appveyor.yml  tox.ini
docs/: calibration.rst  comparing.rst  conf.py  faq.rst  features.rst  glossary.rst  hooks.rst  index.rst  installation.rst  pedantic.rst  readme.rst  requirements.txt  spelling_wordlist.txt  usage.rst
docs/reference/: index.rst  pytest_benchmark.rst
src/pytest_benchmark/: __init__.py  __main__.py  benchmark_hooks.py  cli.py  compat.py  csv.py  elasticsearch_storage.py  fixture.py  fixture.pyi  histogram.py  hookspec.py  logger.py  newhooks.py  pep418.py  plugin.py  reporting.py  session.py  stats.py  stats.pyi  storage.py  table.py  timers.py  utils.py
tests/: test_acceptation.py  test_args.t  test_benchmark.py  test_calibration.py  test_cli.py  test_doctest.rst  test_elasticsearch_storage.py  test_groups.t  test_help.t  test_histogram.py  test_manual.py  test_marks.t  test_nbmake.ipynb  test_no_run_broken.t  test_normal.py  test_normal.t  test_pedantic.py  test_pytest_benchmark.py  test_s3_storage.py  test_sample.py  test_skip.py  test_stats.py  test_storage.py  test_stubs.py  test_utils.py  test_with_testcase.py  test_with_weaver.py
tests/test_histogram/: 0002_98a371badf8daa50eb83ecfd889eac2143c9cf8d_20150811_061507.json  0003_98a371badf8daa50eb83ecfd889eac2143c9cf8d_20150811_133505.json
tests/test_storage/: 0001_b692275e28a23b5d4aae70f453079ba593e60290_20150811_052350.json  0001_b87b9aae14ff14a7887a6bbaa9731b9a8760555d_20150814_190343_uncommitted-changes.json  0002_b87b9aae14ff14a7887a6bbaa9731b9a8760555d_20150814_190348_uncommitted-changes.json  0003_5b78858eb718649a31fb93d8dc96ca2cee41a4cd_20150815_030157_uncommitted-changes.json  0003_b87b9aae14ff14a7887a6bbaa9731b9a8760555d_20150814_190353_uncommitted-changes.json  0004_5b78858eb718649a31fb93d8dc96ca2cee41a4cd_20150815_030202_uncommitted-changes.json  0004_b87b9aae14ff14a7887a6bbaa9731b9a8760555d_20150814_190358_uncommitted-changes.json  0005_5b78858eb718649a31fb93d8dc96ca2cee41a4cd_20150815_030207_uncommitted-changes.json  0005_b87b9aae14ff14a7887a6bbaa9731b9a8760555d_20150814_190403_uncommitted-changes.json  0006_5b78858eb718649a31fb93d8dc96ca2cee41a4cd_20150815_030213_uncommitted-changes.json  0006_b87b9aae14ff14a7887a6bbaa9731b9a8760555d_20150814_190408_uncommitted-changes.json  0007_5b78858eb718649a31fb93d8dc96ca2cee41a4cd_20150815_030218_uncommitted-changes.json  0007_b87b9aae14ff14a7887a6bbaa9731b9a8760555d_20150814_190413_uncommitted-changes.json  0008_5b78858eb718649a31fb93d8dc96ca2cee41a4cd_20150815_030223_uncommitted-changes.json  0008_b87b9aae14ff14a7887a6bbaa9731b9a8760555d_20150814_190418_uncommitted-changes.json  0009_5b78858eb718649a31fb93d8dc96ca2cee41a4cd_20150815_030228_uncommitted-changes.json  0009_b87b9aae14ff14a7887a6bbaa9731b9a8760555d_20150814_190423_uncommitted-changes.json  0010_5b78858eb718649a31fb93d8dc96ca2cee41a4cd_20150815_030233_uncommitted-changes.json  0010_b87b9aae14ff14a7887a6bbaa9731b9a8760555d_20150814_190428_uncommitted-changes.json  0011_5b78858eb718649a31fb93d8dc96ca2cee41a4cd_20150815_030238_uncommitted-changes.json  0011_b87b9aae14ff14a7887a6bbaa9731b9a8760555d_20150814_190433_uncommitted-changes.json  0012_5b78858eb718649a31fb93d8dc96ca2cee41a4cd_20150815_030243_uncommitted-changes.json  0012_b87b9aae14ff14a7887a6bbaa9731b9a8760555d_20150814_190439_uncommitted-changes.json  (+37 more)
(+8 files in other folders)
